# christmas

./: .gitignore  Dockerfile  README.md
.zed/: settings.json
RFCs/: .$accounts.drawio.bkp  Accounts.md  CouponNFTs.md  accounts.drawio
ai/: README.md
assets/: resources.markdown
christmas/: .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
christmas-web3/: Anchor.toml  README.md
christmas-web3/tests/: christmas-web3.ts
christmas/app/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  components.json  package-lock.json  package.json  railway.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
christmas/app-svelte/: package-lock.json  package.json  svelte.config.js  vite.config.ts
christmas/character-animation-editor/: .gitignore  package-lock.json  package.json  vite.config.ts
christmas/dungeon-master/: .gitignore  geohash.ipynb  main.py  pathfinding.ipynb  pyproject.toml  test.ipynb  topology.ipynb
christmas/dungeon-master/dm/: api.py  game.py  pathfinding.py  queries.py  types.py  utils.py
christmas/dungeon-master/dm/world/: abilities.py  bestiary.py  biomes.py  settings.py  world.py
christmas/lib/: nftStorageClient.ts  utils.ts
christmas/quest-generator/: .gitignore  README.md  pyproject.toml
christmas/quest-generator/quest/: llm_utils.py  location_utils.py  main.py  models.py  quest.py
christmas/quest-generator/tests/: test_quest.py
christmas/tests/: christmas.ts  geo.ts  setup-env-hook.js  test_coupon.ts  test_demo.ts  test_geo.ts  test_happy.ts  test_happy_flow.ts  test_initialize.ts  test_storage.ts  test_unhappy.ts  test_unhappy_flow.ts  test_user.ts  test_utils.ts  utils.ts
christmas/world-tools/sanctuaries/: .gitignore  generate_sanctuaries.ipynb  ne_110m_populated_places.csv  pyproject.toml  sanctuaries.json
christmas/world-tools/topology/: .gitignore  generate_characteristics.ipynb  preprocess.ipynb  pyproject.toml  qgis.qgz
christmas/worlds/yggdrasil-01/: pyproject.toml
client/: config-overrides.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/src/: App.tsx  index.css  index.html  index.ts
comfyui/workflows/: avatar_style_transfer.json  generate_head.json  layer_diffuse.json  layer_diffuse_avatar.json  normal_map.json
deprecate/: webpack.config.js
deprecate/__app/: package.json
deprecate/christmas-web3/: Anchor.toml  README.md
deprecate/christmas-web3/programs/christmas-web3/: Cargo.toml
deprecate/christmas-web3/programs/christmas-web3/src/: lib.rs
deprecate/client/: package.json
deprecate/components/: ClaimedCouponCard.svelte  CreateCouponForm.svelte  CreateStoreForm.svelte  ImageInput.svelte  RedeemCouponForm.svelte  StoreSection.svelte  Wallet.svelte
deprecate/pay-for/: +server.ts
deprecate/tests/: test_account_creation.ts  test_geo.ts  utils.ts
docs/: generate_prompt.ipynb
docs/character-animation-editor/: Face Avatar.md
docs/crossover/: Design Document.md  character-creation-management.md  character-creator.md  character-progression.md  character-spirtes.md  cmd-login.md  combat.md  crossover.md  dungeon-master.md  game-synchronization.md  layers.md  location.md  mud.md  (+7 more)
server/: Cargo.toml
server/static/: index.html  package.json
server/templates/: base.html  index.html
server/templates/layouts/: app-body.html  app-footer.html  app-header.html
tiled/: README.md
(+779 files in other folders)
