[tool.poetry]
name = "earth-heightmap"
version = "0.1.0"
description = ""
authors = ["benjaminhon <benjaminhon86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.0"
pillow = "^10.3.0"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
