[tool.poetry]
name = "yggdrasil-01"
version = "0.1.0"
description = ""
authors = ["benjaminhon <benjaminhon86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.4"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"
imageio = "^2.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
