[package]
name = "christmas-web3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "christmas_web3"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = { git = "https://github.com/coral-xyz/anchor", features =["init-if-needed"] }
# anchor-spl = { git = "https://github.com/coral-xyz/anchor" }

anchor-lang = "0.27.0"
getrandom = { version = "0.2", features = ["custom"] }